fixed text overflowing issues with playlist, artist and album pages

--- a/src/components/text/text.component.css
+++ b/src/components/text/text.component.css
@@ -5,3 +5,10 @@
   text-overflow: ellipsis;
   min-width: 0; /* critical when inside flex */
 }
+
+.text-clamp {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
